# diapasom

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  compile.sh  main.cpp
include/: common.hpp  lattice.hpp  memory.hpp  myprint.hpp  parallel.h  parallel.hpp  parameters.hpp  som.hpp
src/: dataset.cpp  dataset.hpp  lattice.cpp  parallel.c  som.cpp  trainfuncs.hpp  trainstate.hpp
tests/: epcall.cpp  tests.cmake  wrapper
tests/reference/: dataset1RS123BS0lattice1.out  dataset1RS123BS0lattice10.out  dataset1RS123BS0lattice20.out  dataset1RS123BS10lattice1.out  dataset1RS123BS10lattice10.out  dataset1RS123BS10lattice20.out  dataset1lattice0.out  dataset2RS123BS0lattice1.out  dataset2RS123BS0lattice20.out  dataset2RS123BS100lattice1.out  dataset2RS123BS100lattice20.out  dataset2lattice0.out
